arc-script/arc-script-test/compile/src/snapshots/ast@lambda.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/lambda.arc
---
fun test() {
    let increment = |i| {
        i + 1
    } in
    let foo = 1 in
    increment(foo)
}

