arc-script/arc-script-test/compile/src/snapshots/ast@ops.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_fail_todo/ops.arc

---
fun test() {
    1 == 2;
    1 != 2;
    1 > 2;
    1 < 2;
    1 >= 2;
    1 <= 2;
    1 + 2;
    1 - 2;
    1 * 2;
    1 / 2;
    true and false;
    true or false;
    not true;
    -1;
    1 ** 2;
    --1 as f32;
    (1, 2, 3).0;
    { a: 1, b: 2, c: 3 }.a;
    emit "foo";
    log "bar";
    unit
}

