arc-script/arc-script-test/compile/src/snapshots/ast@option.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/option.arc

---
enum Opt { Some(i32), None }
fun main() {
    if let Opt::Some(y) = Opt::Some(3) {
        unit
    } else {
        unit
    }
}

