arc-script/arc-script-test/compile/src/snapshots/ast@ownership.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_fail/ownership.arc
---
fun main(s0: ~i32) {
    (s0, s0)
}

