arc-script/arc-script-test/compile/src/snapshots/ast@path.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/path.arc

---
fun main() {
    let x = 1 in
    let y = x in
    unit
}

