arc-script/arc-script-test/compile/src/snapshots/ast@pattern.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/pattern.arc
---
fun main() {
    let ((a, b), (c, d)) = ((1, 2), (3, 4)) in
    unit
}

