arc-script/arc-script-test/compile/src/snapshots/ast@sort_fields.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/sort_fields.arc

---
fun foo(a: { x: i32, y: i32 }) -> i32 {
    a.x + a.y
}
fun bar(a: { y: i32, x: i32 }) -> i32 {
    a.x + a.y
}

