arc-script/arc-script-test/compile/src/snapshots/ast@task-identity-untagged.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/task-identity-untagged.arc
---
task Identity() ((~i32)) -> ((~i32)) {
    on event => emit event
}
fun main(input: ~i32) {
    let output = Identity()(input) in
    output
}

