arc-script/arc-script-test/compile/src/snapshots/ast@task-map.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/task-map.arc
---
task Map(f: fun(i32) -> i32) ((~i32)) -> ((~i32)) {
    on event => emit f(event)
}
fun main(input: ~i32) {
    let output = Map(|x| {
        x + 1
    })(input) in
    output
}

